--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       {
         "matches": ["<all_urls>"],
         "js": ["content.js"],
-        "exclude_matches": ["*://*.google.com/*"]
+        "exclude_matches": ["*://*.google.com/*","*://chat.openai.com/*"]
       }
     ],
     "action": {
