--- a/manifests/manifest.chrome.json
+++ b/manifests/manifest.chrome.json
@@ -1,11 +1,17 @@
 {
   "manifest_version": 3,
   "name": "__MSG_appName__",
-  "version": "1.2",
+  "version": "1.3",
   "description": "__MSG_appDescription__",
   "default_locale": "en",
   "permissions": ["activeTab", "storage", "contextMenus"],
-  "host_permissions": ["https://translate.googleapis.com/*"],
+  "host_permissions": [
+    "https://translate.googleapis.com/*",
+    "https://kateglo.lostfocus.org/*",
+    "https://api.dictionaryapi.dev/*",
+    "https://jotoba.de/*",
+    "https://en.wiktionary.org/*"
+  ],
   "background": {
     "service_worker": "background.js"
   },
