--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["storage.js", "content.js"]
+      "js": ["storage.js", "ui-i18n.js", "content.js"]
     }
   ],
   "action": {
