--- a/manifests/manifest.firefox.json
+++ b/manifests/manifest.firefox.json
@@ -20,7 +20,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["storage.js", "content.js"]
+      "js": ["storage.js", "ui-i18n.js", "content.js"]
     }
   ],
   "browser_action": {
